--- a/assets/sass/abstract/_extends.scss
+++ b/assets/sass/abstract/_extends.scss
@@ -115,19 +115,22 @@
     opacity: 0;
 }
 
-%font-700 {
+%fw-700 {
     font-weight: 700;
 }
 
-%font-600 {
+%fw-600 {
     font-weight: 600;
 }
 
-%font-500 {
+%fw-500 {
     font-weight: 500;
 }
+%fw-400 {
+    font-weight: 400;
+}
 
-%font-300 {
+%fw-300 {
     font-weight: 300;
 }
 
