--- a/assets/sass/components/_logo.scss
+++ b/assets/sass/components/_logo.scss
@@ -1,19 +1,19 @@
 .logo {
-    &__svg {
-        width: 5rem !important;
-        // fill: var(--clr_txt_light);
-        transition: 0.3s;
-    }
-    &__veganify {
-        color: var(--clr_txt_light) !important;
-        text-transform: uppercase;
-        font-size: 1.5rem;
-        font-weight: 600;
-        transition: 0.3s;
+  &__svg {
+    width: 5rem !important;
+    transition: 0.3s;
+  }
+  &__veganify {
+    color: var(--clr_white) !important;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    @extend %fw-600;
+    @extend %flex-center;
+    transition: 0.3s;
 
-        span {
-            font-weight: 300;
-            transition: 0.3s;
-        }
+    span {
+      @extend %fw-300;
+      transition: 0.3s;
     }
+  }
 }
