--- a/assets/sass/layouts/_recipecards.scss
+++ b/assets/sass/layouts/_recipecards.scss
@@ -1,261 +1,254 @@
 .recipecards {
-    padding-bottom: 8vh;
-    @extend %text-center;
+  @extend %text-center;
 
-    &__wrapper {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
-        grid-gap: 20rem 3vw;
-        justify-content: center;
-        place-items: center;
-        text-align: left;
+  &__wrapper {
+    @extend %flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
-        @include device(tab-land) {
-            grid-gap: 20rem 5.8vw;
-        }
-        @include device(phone) {
-            grid-template-columns: repeat(auto-fill, minmax(28rem, 1fr));
-            grid-gap: 20rem 5vw;
-        }
-    }
-
-    &__title {
-        @extend .categories__title;
-        display: inline-block;
-        letter-spacing: 1px;
-        grid-column: 1/-1;
-        color: var(--clr_accent);
-        background: var(--clr_accent_alpha_2);
-        padding: 2.5rem 5vw;
-        margin-bottom: 15rem;
-        border-radius: 3rem;
-    }
+  &__title {
+    grid-column: 1/-1;
+    @extend %fw-600;
+    text-transform: uppercase;
+    display: inline-block;
+    margin: 1rem 0 5rem 0;
+    border-radius: 3rem;
+    @extend %pos-rel;
+  }
 }
 
 .recipecard {
-    --radius-card: 7rem;
-    // @extend %pos-rel;
-    @extend %box-shadow;
-    // @extend %text-center;
-    @extend %cursor;
-    // @extend %overflow-hidden;
+  --radius-card: 5.3rem;
+  // --min-width-recipecard: 14em;
+  // --max-width-recipecard: 17em;
+  --min-width-recipecard: 24.5rem;
+  --max-width-recipecard: 27rem;
 
-    background: var(--clr_bg_card);
-    // width: 30rem;
-    max-width: 38rem;
-    border-radius: var(--radius-card);
-    padding: 2rem;
-    display: grid;
-    grid-gap: 2vh;
+  @extend %box-shadow;
+  @extend %cursor;
+  max-width: var(--max-width-recipecard);
+  flex: 1 1 var(--min-width-recipecard);
+  border-radius: var(--radius-card);
+  padding: 2.2vmin;
+  margin: 2vw;
+  background: var(--clr_card_bg);
+
+  @extend %flex;
+  flex-direction: column;
+  justify-content: space-between;
+  // align-content: center;
+  // display: grid;
+  // grid-gap: 1vw;
+  transition: 0.5s;
+
+  @include device(phone-land) {
+    --min-width-recipecard: 22rem;
+  }
+
+  &:hover,
+  &:focus {
+    .recipecard__img {
+      transform: scale(1.2);
+    }
+    .recipecard__category {
+      transform: translate(15%, 15%);
+      &::after {
+        transform: scale(1);
+      }
+    }
+    .recipecard__title {
+      transform: translateY(25%);
+    }
+    .recipecard__min {
+      svg,
+      p {
+        transform: translateX(1rem);
+        opacity: 1;
+        span {
+          opacity: 0.5;
+        }
+      }
+      svg {
+        opacity: 0.8;
+        stroke: var(--clr_accent);
+      }
+    }
+    .recipecard__bookmark {
+      transform: scale(1.1);
+    }
+  }
+
+  &__figure {
+    @extend %overflow-hidden;
+    @extend %pos-rel;
+    width: 100%;
+    // height: 20rem;
+    // height: 64%;
+    max-height: 64%;
+    border-radius: calc(var(--radius-card) - 0.8rem);
+    transition: 0.5s;
+    margin-bottom: 1rem;
+
+    // box-shadow: inset -3px -100px 34px -22px rgba(0, 0, 0, 0.8);
+    // z-index: 12;
+
+    &::after {
+      // TODO za dark mode potamniti slike
+      @extend %after;
+      z-index: 10;
+      top: 0;
+      left: 0;
+      // background: hsla(240, 28%, 10%, 0.2);
+      mix-blend-mode: luminosity;
+      // mix-blend-mode: soft-light;
+    }
+  }
+
+  &__img {
+    @extend %img-basic;
+    transition: 1s;
+    transform: scale(1.1);
+  }
+
+  &__body {
+    padding: 0 1.4rem;
+    flex: 1 1;
+  }
+
+  &__category {
+    @extend %pos-rel;
+    @extend %flex;
+
+    color: var(--clr_accent);
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    padding: 0.6rem 0rem;
+    width: fit-content;
+    // display: inline-block;
+    margin-bottom: 0.2rem;
+    // display: grid;
+    // place-items: center;
+
+    transition: 0.5s;
+    transition-delay: 0.2s;
+
+    &::after {
+      @extend %after;
+      width: 130%;
+      background: var(--clr_accent_light);
+      top: 0;
+      left: -15%;
+      border-radius: 1rem;
+      transform-origin: 0 50%;
+      transform: scale(0);
+      transition: 0.5s;
+      z-index: -1;
+    }
+  }
+  &__title {
+    @extend %fw-600;
+    text-align: left;
+    margin-bottom: 1rem;
+    text-transform: capitalize;
+    word-wrap: break-word;
+    transition: 0.5s;
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateY(12%);
+  }
+
+  &__min {
+    @extend %flex-center;
     transition: 0.5s;
 
+    svg {
+      width: 1.5rem;
+      margin-right: 1rem;
+      stroke: currentColor;
+      align-self: flex-start;
+      transition: 0.4s;
+      transition-delay: 0.15s;
+      opacity: 0.5;
+    }
+
+    p {
+      line-height: 1;
+      transition: 0.5s;
+      font-weight: 600;
+      opacity: 0.5;
+
+      span {
+        font-weight: normal;
+        font-size: 1.4rem;
+      }
+    }
+  }
+  &__bookmark {
+    will-change: transform;
+    --size: 4.2rem;
+    width: var(--size);
+    height: var(--size);
+    display: grid;
+    place-items: center;
+    border-radius: 0.8em;
+    background: var(--clr_accent_light);
+    z-index: 2;
+    transition: transform 0.3s;
+
+    &-svgs {
+      @extend %pos-rel;
+      display: grid;
+      place-items: center;
+    }
+
+    &-svg {
+      --svg-size: 2.4rem;
+      @extend %pos-abs;
+      height: var(--svg-size);
+      width: var(--svg-size);
+      fill: var(--clr_accent);
+      transition: 0.3s;
+
+      &--outline {
+        z-index: 1;
+        // transform: scale(0);
+        // transition: 0.5s;
+      }
+      &--filled {
+        z-index: 1;
+        opacity: 0;
+        transform: scale(0.4);
+        transition: 0.5s;
+      }
+    }
+
     &:hover {
-        transform: translateY(-2%);
-
-        .recipecard__img {
-            transform: scale(1.2);
-        }
-        .recipecard__category {
-            padding: 0.8rem 1rem;
-            transform: translateY(35%);
-
-            &::after {
-                transform: scale(1);
-            }
-            // background: var(--clr_accent_alpha_2);
-        }
-        .recipecard__title {
-            transform: translateY(30%);
-        }
-        .recipecard__min {
-            svg,
-            p {
-                transform: translateX(1rem);
-                opacity: 1;
-                span {
-                    opacity: 0.5;
-                }
-            }
-
-            svg {
-                opacity: 0.8;
-                fill: var(--clr_accent);
-            }
-        }
-        .recipecard__bookmark {
-            &::after {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-    }
-
-    &__figure {
-        @extend %overflow-hidden;
-        // width: 100%;
-        // height: 100%;
-        height: 22rem;
-        border-radius: calc(var(--radius-card) - 1rem);
-        transition: 0.5s;
-        // z-index: 10;
-        // transform: scale(0.88);
-    }
-    &__img {
-        @extend %img-basic;
-        border-radius: calc(var(--radius-card) - 1rem);
-        transition: 1s;
-    }
-
-    &__body {
-        padding: 0 2vw;
-    }
-
-    &__category {
-        @extend %pos-rel;
-
-        color: var(--clr_accent);
-        text-transform: uppercase;
-        font-size: 1.3rem;
-        font-weight: 700;
-        letter-spacing: 0.8px;
-        padding: 0.8rem 0rem;
-        display: inline-block;
-        // display: grid;
-        // place-items: center;
-
-        transition: 0.5s;
-        transition-delay: 0.2s;
-
-        &::after {
-            @extend %after;
-            background: var(--clr_accent_alpha_2);
-            top: 0;
-            left: 0;
-            border-radius: 1rem;
-            transform-origin: 0 50%;
-            transform: scale(0);
-            transition: 0.5s;
-
-            // top: 0;
-        }
-    }
-    &__title {
-        font-size: 2.2rem;
-        font-weight: 500;
-        margin-bottom: 2rem;
-        text-transform: capitalize;
-        word-break: break-all;
-        color: var(--clr_txt_black);
-        transition: 0.5s;
-    }
-
-    &__footer {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    &__min {
-        display: flex;
-        align-items: center;
-        transition: 0.5s;
-
-        svg {
-            width: 1.5rem;
-            margin-right: 1rem;
-            vertical-align: middle;
-            fill: currentColor;
-            // fill: var(--clr_accent);
-            transition: 0.4s;
-            transition-delay: 0.15s;
-            opacity: 0.5;
-        }
-
-        p {
-            line-height: 1;
-            transition: 0.5s;
-            font-weight: 600;
-            opacity: 0.5;
-
-            span {
-                // font-size: 1.8rem;
-                font-weight: normal;
-            }
-        }
-    }
-    &__bookmark {
-        @extend %pos-rel;
-        @extend %overflow-hidden;
-        --size: 5rem;
-        width: var(--size);
-        height: var(--size);
-        display: grid;
-        place-items: center;
-        border-radius: 1.4rem;
-        z-index: 2;
-
-        &::after {
-            @extend %after;
-            background: var(--clr_accent_alpha_2);
-            transform: scale(0.4);
-            transition: 0.5s;
-            opacity: 0;
-            z-index: 1;
-        }
-
-        &-svgs {
-            @extend %pos-rel;
-            display: grid;
-            place-items: center;
-        }
-
-        &-svg {
-            @extend %pos-abs;
-            height: 3rem;
-            width: 3rem;
-            fill: var(--clr_accent);
-            transition: 0.3s;
-
-            &--outline {
-                z-index: 1;
-                // transform: scale(0);
-                // transition: 0.5s;
-            }
-            &--filled {
-                z-index: 1;
-                opacity: 0;
-                transform: scale(0.4);
-                transition: 0.5s;
-            }
-        }
-
-        &:hover {
-            &::after {
-                transform: scale(1);
-                opacity: 1;
-            }
-            // svg {
-            //     transform: scale(0.95);
-            // }
-            .recipecard__bookmark-svg--filled {
-                transform: scale(1);
-                opacity: 1;
-            }
-            .recipecard__bookmark-svg--outline {
-                transform: scale(0);
-                opacity: 0;
-            }
-        }
-
-        &--saved {
-            @extend .recipecard__bookmark, :hover;
-        }
-    }
-
-    @include device(phone-land) {
-        transform: scale(0.9);
-    }
-    @include device(phone) {
+      .recipecard__bookmark-svg--filled {
         transform: scale(1);
+        opacity: 1;
+      }
+      .recipecard__bookmark-svg--outline {
+        transform: scale(0);
+        opacity: 0;
+      }
     }
+
+    &--saved {
+      @extend .recipecard__bookmark, :hover;
+    }
+  }
+
+  @include device(phone-land) {
+    transform: scale(0.9);
+  }
+  @include device(phone) {
+    transform: scale(1);
+  }
 }
