--- a/assets/sass/layouts/_sidebar.scss
+++ b/assets/sass/layouts/_sidebar.scss
@@ -1,39 +1,36 @@
 .sidebar {
-    --radius-sidebar: 8rem;
-    grid-area: side;
-    border-radius: var(--radius-sidebar);
-    @extend %box-shadow;
-    padding: 7vh 2vw;
+  --radius-sidebar: 8rem;
+  grid-area: side;
 
-    background: var(--clr_accent_gradient);
-    color: var(--clr_txt_light);
+  background: var(--clr_grd_bg);
+  color: var(--clr_white);
+  border-radius: var(--radius-sidebar);
+  @extend %box-shadow;
+  height: var(--sidebars_height);
+  // max-width: 35rem;
+  padding: 5vh 2vw;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  right: 0;
+  display: grid;
+  grid-gap: 2rem;
+  transform-origin: right center;
+  // overflow-y: scroll;
 
-    // height: calc(100vh - 6vw);
-    height: var(--sidebars_height);
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    display: grid;
-    grid-gap: 2rem;
-    align-items: center;
-    justify-content: center;
-    overflow-y: hidden;
+  &__title {
+    @extend %text-center;
+    @extend %fw-300;
+    font-size: 2.4rem;
+    color: currentColor;
+    align-self: center;
 
-    &__title {
-        @extend %text-center;
-        font-weight: 300;
-        font-size: 2.4rem;
-        span {
-            font-weight: 700;
-        }
+    span {
+      @extend %fw-700;
     }
+  }
 
-    @include device(tab-land) {
-        display: none;
-        position: relative;
-        bottom: 0;
-        top: none;
-        left: 0;
-        // height: max-content;
-    }
+  @include device(tab-land) {
+    display: none;
+  }
 }
