--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,32 +1,31 @@
 .home {
-    width: 100vw;
-    height: 100vh;
-    padding: var(--padding-home);
-    display: grid;
-    justify-content: space-between;
-    // align-content: center;
-    grid-template-columns: max-content repeat(6, 1fr);
-    grid-template-areas:
-        "nav mid mid mid mid side side"
-        "nav mid mid mid mid side side"
-        "nav mid mid mid mid side side";
-    grid-gap: 5vw;
-    // height: 100vh;
-    // background: cornsilk;
-    // background: var(--clr_bg);
-    overflow-y: scroll;
+  height: 100vh; //! mora da se odredi ova visina zbog nava i sidebara
+  width: 100%;
+  overflow-y: scroll;
+  padding: var(--padding-home);
+  display: grid;
+  justify-content: center;
+  grid-auto-flow: column;
+  grid-template-areas: 'nav mid side side';
 
-    @include device(tab-land) {
-        grid-template-columns: max-content 1fr;
-        grid-template-rows: repeat(auto, 1fr);
-        grid-template-areas:
-            "nav mid"
-            ". side";
-    }
-    @include device(phone-land) {
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            "mid"
-            "nav";
-    }
+  // grid-template-areas: "sidebar main aside";
+  grid-template-areas: 'nav mid side';
+  // grid-template-columns: minmax(0, 1fr) minmax(0, 12fr) minmax(300px, 7fr);
+  grid-template-columns: minmax(0, max-content) minmax(0, 13fr) minmax(
+      30rem,
+      4fr
+    );
+
+  @include device(tab-land) {
+    grid-template-areas: 'nav mid mid';
+    // grid-template-columns: minmax(0, 1fr) minmax(0, 4fr);
+  }
+
+  @include device(phone-land) {
+    grid-template-areas:
+      'mid'
+      'nav';
+    height: auto;
+    grid-template-columns: 1fr;
+  }
 }
